--- a/CycleDetection/CycleDetection.csproj
+++ b/CycleDetection/CycleDetection.csproj
@@ -40,7 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="TarjanCycleDetect.cs" />
+    <Compile Include="CycleDetector.cs" />
     <Compile Include="DepGraph.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Vertex.cs" />
