--- a/StronglyConnectedComponentsTests/StronglyConnectedComponentsTests.csproj
+++ b/StronglyConnectedComponentsTests/StronglyConnectedComponentsTests.csproj
@@ -46,7 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="GraphTests.cs" />
+    <Compile Include="StronglyConnectedComponentTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\StronglyConnectedComponents\StronglyConnectedComponents.csproj">
